2019-1/230/users/2352/executions/1762_1185.log
== TEST (2019-05-29 00:08:15) 
-- CODE:
from numpy import *

ex = array(eval(input("Digite: ")))

i = 0
acm = 0
k = 0

while(i size(ex)):
	if(ex[i] > 99):
		print(acm)
		k = k + 1
	i = i + 1
	acm = acm + 1

print(k)
-- ERROR:
File "XXXX", line 9
    while(i size(ex)):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:09:02) 
-- CODE:
from numpy import *

ex = array(eval(input("Digite: ")))

i = 0
acm = 0
k = 0

while(i < size(ex)):
	if(ex[i] > 99):
		print(acm)
		k = k + 1
	i = i + 1
	acm = acm + 1

print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 00:10:01) 
-- CODE:
from numpy import *

ex = array(eval(input("Digite: ")))

i = 0
acm = 0
k = 0

while(i < size(ex)):
	if(ex[i] > 99):
		print(acm)
		k = k + 1
	i = i + 1
	acm = acm + 1

print(k)
-- EXECUTION TIME:
0.430215
-- TEST CASE 1:
---- input:
[101,89,105,88,104,87]
---- correct output:
0
2
4
3
---- user output:
0
2
4
3
-- TEST CASE 2:
---- input:
[88,100,105,107,100,108,110,99,98,100]
---- correct output:
1
2
3
4
5
6
9
7
---- user output:
1
2
3
4
5
6
9
7
-- TEST CASE 3:
---- input:
[99,98,98,99,98,97]
---- correct output:
0
---- user output:
0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
